@@ -2,6 +2,8 @@ Giraph Change Log
 
 Release 0.70.0 - unreleased
 
+  GIRAPH-73: A little refactoring. (ssc via aching)
+
   GIRAPH-106: Change prepareSuperstep() to make
   setMessages(Iterable<M> messages) package-private. (aching)
  
